--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "react": "^16.9.0",
     "react-app-rewired": "^2.1.3",
     "react-dom": "^16.9.0",
+    "react-redux": "^7.1.0",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.1",
+    "redux": "^4.0.4",
     "styled-jsx": "^3.2.1",
     "styled-jsx-plugin-less": "0.0.1-alpha.1"
   },
